RESOLVED FIXED210139
REGRESSION(r253346): some Automation commands targeted at an iframe do not return
https://bugs.webkit.org/show_bug.cgi?id=210139
Summary REGRESSION(r253346): some Automation commands targeted at an iframe do not re...
Blaze Burg
Reported 2020-04-07 11:59:15 PDT
.
Attachments
Patch (10.16 KB, patch)
2020-04-07 15:21 PDT, Blaze Burg
no flags
Blaze Burg
Comment 1 2020-04-07 11:59:28 PDT
Blaze Burg
Comment 2 2020-04-07 15:21:02 PDT
Devin Rousso
Comment 3 2020-04-07 16:31:02 PDT
Comment on attachment 395748 [details] Patch r=me
EWS
Comment 4 2020-04-08 10:30:26 PDT
Committed r259727: <https://trac.webkit.org/changeset/259727> All reviewed patches have been landed. Closing bug and clearing flags on attachment 395748 [details].
Note You need to log in before you can comment on or make changes to this bug.